Fixed vertical alignment of text in tabledrag

--- a/scss/components/_tabledrag.scss
+++ b/scss/components/_tabledrag.scss
@@ -1,12 +1,23 @@
-.touchevents a.tabledrag-handle {
+.field-multiple-drag a.tabledrag-handle {
     width: 30px;
+}
 
-    .handle {
-        width: 40px;
-        height: 44px;
-        margin: 0;
-        padding: 0;
-        background-position: center center;
+.touchevents {
+    a.tabledrag-handle {
+        .handle {
+            width: 40px;
+            height: 44px;
+            margin: 0;
+            padding: 0;
+            background-position: center center;
+        }
+    }
+
+    .draggable {
+        td:first-of-type {
+            display: flex;
+            align-items: center;
+        }
     }
 }
 
